Fixed overflow issue with gifs

--- a/CS320GroupProject/Conway/eric--web/static/css/home.css
+++ b/CS320GroupProject/Conway/eric--web/static/css/home.css
@@ -172,13 +172,9 @@ ul.qualityList li:before {
 }
 
 .gallery {
-  display: table-row;
-  white-space: nowrap;
-  overflow: hidden;
-  left: 100%;
-  position: relative;
+  margin: auto;
+  width: 28%;
   text-align: center;
-  width: 100%;
 }
 
 .wrap {
